Fixed box sizing pricing.html

--- a/static_pages/business_profile.html
+++ b/static_pages/business_profile.html
@@ -32,7 +32,7 @@
    </a>
    <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active" >
+      <li class="nav-item " >
 
 
         <a class="nav-link" href="#" style="color: black;"> <i class="far fa-bell" style="padding-right: 10px;"></i>      Welcome Joe Berthelot
@@ -68,6 +68,40 @@
       </div>
 
     </h2>
+    <div>
+      <h2>Dream Team</h2>
+      <h3>See our recommended partners</h3>
+      <div id="dream_row_pics">
+        <img src="" alt="sample image">
+        <img src="" alt="sample image">
+        <img src="" alt="sample image">
+        <img src="" alt="sample image">
+        <img src="" alt="sample image">
+      </div>
+    </div>
+
+    <div>
+      <h1><span>Location</span> <span>Get Directions</span> </h1>
+      <h2>1352 3rd St.</h2>
+      <h2>Santa Monica</h2>
+
+      <div id="goog_map">
+        Google Map Box Goes Here
+      </div>
+
+    </div>
+
+    <div id="reviews" class="row">
+      <div class="col-md-3">
+        <div>Profile 1</div>
+        <div>Profile 2</div>
+      </div>
+      <div class="col-md-3">
+        <div>Profile 3</div>
+        <div>Profile 4</div>
+      </div>
+    </div>
+
     </div>
     <div class="col-sm-1"></div>
     <div class="col-sm-3">
