--- a/static_pages/pricing.html
+++ b/static_pages/pricing.html
@@ -22,7 +22,7 @@
    </a>
    <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active" >
+      <li class="nav-item" >
 
 
         <a class="nav-link" href="#" style="color: black;"> <i class="far fa-bell" style="padding-right: 10px;"></i>      Welcome Joe Berthelot
@@ -45,7 +45,42 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4 col-sm-12">
+      <div class="col-md-3 col-sm-12">
+      <div class="row">
+          <div class="col s12 m7">
+            <div class="card">
+              <div class="card-image">
+              </div>
+              <div class="card-content">
+                <p class="fee-title">Free-Time</p>
+              </div>
+
+              <div class="card-content price">Free!</div>
+              <hr>
+              <div class="card-content">Instagram Portfolios</div>
+              <hr>
+              <div class="card-content">Verified Ratings</div>
+              <hr>
+              <div class="card-content">Wrapify Earnings</div>
+              <hr>
+              <div class="card-content"></div>
+              <hr>
+                <div class="card-content"></div>
+              <hr>
+                <div class="card-content"></div>
+              <hr>
+                <div class="card-content"></div>
+              <hr>
+                <div class="card-content"></div>
+              
+              <div class="card-action subscribe-button">
+                <a href="#" style="color:green;">Subscribe</a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+    <div class="col-md-3 col-sm-12">
       <div class="row">
           <div class="col s12 m7">
             <div class="card">
@@ -55,24 +90,23 @@
                 <p class="fee-title">Part-Time</p>
               </div>
 
-              <div class="card-content price">Free!</div>
-              <div class="card-content">Business Facebook/Instagram Linkage</div>
+              <div class="card-content price">$39.00</div>
               <hr>
-              <div class="card-content">Reviews</div>
+               <div class="card-content">Instagram Portfolios</div>
+              <hr>
+              <div class="card-content">Verified Ratings</div>
+              <hr>
+              <div class="card-content">Wrapify Earnings</div>
+              <hr>
+              <div class="card-content">Dream Team Network</div>
+              <hr>
+              <div class="card-content">Payments w/ Stripe Client Management</div>
+              <hr>
               <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
+              <hr>
+              
+                <div class="card-content"></div>
+              <hr>
               <div class="card-content"></div>
               <div class="card-action subscribe-button">
                 <a href="#" style="color:green;">Subscribe</a>
@@ -81,7 +115,7 @@
           </div>
         </div>
     </div>
-    <div class="col-md-4 col-sm-12">
+    <div class="col-md-3 col-sm-12">
       <div class="row">
           <div class="col s12 m7">
             <div class="card">
@@ -91,23 +125,22 @@
                 <p class="fee-title">Full-Time</p>
               </div>
 
-              <div class="card-content price">$39.00/mo</div>
-              <div class="card-content">Business Facebook/Instagram Linkage</div>
+              <div class="card-content price">$79.00/mo</div>
+                <hr>
+                            <div class="card-content">Instagram Portfolios</div>
               <hr>
-              <div class="card-content">Reviews</div>
+              <div class="card-content">Verified Ratings</div>
               <hr>
-              <div class="card-content">Wrapify Earnings Eligible</div>
+              <div class="card-content">Wrapify Earnings</div>
               <hr>
-              <div class="card-content">Stripe Connect - Escrow + Payments</div>
+              <div class="card-content">Dream Team Network</div>
               <hr>
-              <div class="card-content">DreamTeam - Business Networking</div>
+              <div class="card-content">Payments w/ Stripe Client Management</div>
               <hr>
-              <div class="card-content">Legalzoon Discount</div>
+              <div class="card-content">On-Demand Scheduling</div>
+              <hr>
               <div class="card-content"></div>
-              <div class="card-content"></div>
-              <div class="card-content"></div>
-               <div class="card-content"></div>
-              <div class="card-content"></div>
+              <hr>
               <div class="card-content"></div>
               <div class="card-action subscribe-button">
                 <a href="#" style="color:green;">Subscribe</a>
@@ -116,7 +149,7 @@
           </div>
         </div>
     </div>
-    <div class="col-md-4 col-sm-12">
+    <div class="col-md-3 col-sm-12">
       <div class="row">
           <div class="col s12 m7">
             <div class="card">
@@ -126,24 +159,23 @@
                 <p class="fee-title">Big-Time</p>
               </div>
 
-              <div class="card-content price">$59.00/mo</div>
-              <div class="card-content">Business Facebook/Instagram Linkage</div>
+              <div class="card-content price">$119.00/mo</div>
+                <hr>
+              <div class="card-content">Instagram Portfolios</div>
               <hr>
-              <div class="card-content">Reviews</div>
+              <div class="card-content">Verified Ratings</div>
               <hr>
-              <div class="card-content">Wrapify Earnings Eligible</div>
+              <div class="card-content">Wrapify Earnings</div>
               <hr>
-              <div class="card-content">Stripe Connect - Escrow + Payments</div>
+              <div class="card-content">Dream Team Network</div>
               <hr>
-              <div class="card-content">DreamTeam - Business Networking</div>
-              <hr>
-              <div class="card-content">Legalzoon Discount</div>
-              <hr>
-              <div class="card-content">Custom URL</div>
+              <div class="card-content">Payments w/ Stripe Client Management</div>
               <hr>
               <div class="card-content">On-Demand Scheduling</div>
               <hr>
-              <div class="card-content">Boosted Search Results</div>
+              <div class="card-content">Custom URL Hosting</div>
+              <hr>
+              <div class="card-content">Hubspot Integration</div>
               <div class="card-action subscribe-button">
                 <a href="#" style="color:green;">Subscribe</a>
               </div>
